test/simple/ill-typed/nested_tuple_left.caprice
(* TEST
  include refute;
*)


let x : int * bool * int = (0, 0), 0
